Add testing; package details; linting and dns resolution on hosts...

--- a/serverless.yml
+++ b/serverless.yml
@@ -15,7 +15,7 @@ functions:
     handler: handler.check
     events:
       - http:
-          path: /{path*}
+          path: /{path}
           method: get
           cors: true
 plugins:
