--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "scripts": {
     "start": "serverless offline start",
-    "deply": "sls deploy",
+    "deploy": "sls deploy",
     "test": "echo \"Error: no test specified yet.\" && exit 1",
     "lint": "eslint ."
   },
